[package]
name = "attestation-server"
version = "0.1.0"
authors = ["LKatalin"]
edition = "2018"

[dependencies]
sgx-isa = { version = "0.2", features = ["sgxstd"] }
openssl = { version = "0.10.24", features = ["vendored"]}
#mbedtls = "0.3.0"
#mbedtls = {version="0.3.0", default-features = false, features = ["sgx"]}
#mbedtls = { version = "0.3.0", path = "../../rust-mbedtls/mbedtls"}

#[patch.crates-io]
#mbedtls = { git = "https://github.com/ekse/rust-mbedtls", branch = "bindgen-upgrade-v2" }
